--- a/app/src/main/res/layout/fragment_localizacao.xml
+++ b/app/src/main/res/layout/fragment_localizacao.xml
@@ -6,26 +6,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Localizacao">
 
-    <ImageView
-        android:id="@+id/ivDia"
-        android:layout_width="63dp"
-        android:layout_height="67dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="40dp"
-        android:src="@drawable/ic_dia"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvCidadeRec"
-        android:contentDescription="@string/todo" />
-
     <TextView
         android:id="@+id/tvClimaRecDia"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="172dp"
+        android:layout_marginEnd="16dp"
         android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ivDia" />
+        app:layout_constraintEnd_toStartOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/tvCidadeRec" />
 
     <TextView
         android:id="@+id/tvClimaRecNoite"
@@ -43,12 +32,12 @@
         android:id="@+id/tvTemperaturaRecMax"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="116dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="96dp"
+        android:layout_marginEnd="68dp"
         android:fontFamily="@font/amiko_semibold"
         android:textSize="36sp"
-        app:layout_constraintStart_toEndOf="@+id/ivDia"
-        app:layout_constraintTop_toBottomOf="@+id/ivClimaDia" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageButton2" />
 
     <TextView
         android:id="@+id/tvCidadeRec"
@@ -68,7 +57,6 @@
         android:layout_marginEnd="16dp"
         android:background="@color/common_google_signin_btn_text_dark_default"
         android:contentDescription="@string/todo"
-        android:onClick="openActivitySuporte"
         android:scaleType="centerInside"
         android:src="@drawable/ic_message_black_24dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -78,8 +66,8 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="88dp"
-        android:layout_marginEnd="48dp"
+        android:layout_marginTop="84dp"
+        android:layout_marginEnd="16dp"
         android:text="@string/Ajuda"
         app:layout_constraintEnd_toStartOf="@+id/btnLigar"
         app:layout_constraintTop_toTopOf="parent" />
@@ -92,7 +80,6 @@
         android:layout_marginEnd="12dp"
         android:background="#FFFFFF"
         android:contentDescription="@string/todo"
-        android:onClick="LigarDev"
         android:src="@drawable/ic_call_black_24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -107,35 +94,5 @@
         android:fontFamily="@font/amiko_semibold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/ivClimaDia"
-        android:layout_width="63dp"
-        android:layout_height="67dp"
-        android:layout_marginStart="144dp"
-        android:layout_marginTop="128dp"
-        android:src="@drawable/ic_dia"
-        app:layout_constraintStart_toEndOf="@+id/tvCidadeRec"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/ivClimaNoite"
-        android:layout_width="63dp"
-        android:layout_height="67dp"
-        android:layout_marginStart="84dp"
-        android:layout_marginBottom="248dp"
-        android:src="@drawable/ic_dia"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/ivNoite" />
-
-    <ImageView
-        android:id="@+id/ivNoite"
-        android:layout_width="70dp"
-        android:layout_height="62dp"
-        android:layout_marginStart="24dp"
-        android:src="@drawable/ic_noite"
-        app:layout_constraintBottom_toTopOf="@+id/tvClimaRecNoite"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvClimaRecDia" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
